--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -208,3 +208,26 @@ i.bg-primary {
 .icon-badge:hover {
     background-color: var(--bs-link-hover-color);
 }
+
+.upload-container,.upload-container label{
+    width: 100%;
+    height: 100%;
+}
+
+.upload-container label{
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/0/0e/DefaultImage.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+}
+.upload-container span {
+    margin-bottom: .5rem;
+    margin-right: .5rem;
+}
+
+.upload-container input {
+    display: none;
+}
